Prevent tags input from shifting when tags are present/absent

--- a/app/assets/stylesheets/general/_form.scss
+++ b/app/assets/stylesheets/general/_form.scss
@@ -328,6 +328,7 @@ input[type="file"] {
   @extend .inline-input;
   width: initial;
   margin-top: 5px;
+  padding: 4px 0 3px 0;
 }
 
 .form-tags-tag {
